--- a/MauiApp2/DownloadPage.xaml
+++ b/MauiApp2/DownloadPage.xaml
@@ -2,8 +2,68 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="DailyDataEntryApp.DownloadPage"
-             >
-    <VerticalStackLayout>
-        
+             BackgroundColor="#f5f5f5">
+
+    <VerticalStackLayout 
+        Padding="20"
+        Spacing="20">
+
+        <!-- Title -->
+        <Label 
+            Text="Download Deposit Report"
+            FontSize="24"
+            FontAttributes="Bold"
+            TextColor="#333"
+            VerticalOptions="Center" 
+            HorizontalOptions="Center" />
+
+        <!-- Name Field -->
+        <Label 
+            Text="Name"
+            FontAttributes="Bold"
+            TextColor="#666" />
+        <Entry 
+            Placeholder="Enter Name"
+            BackgroundColor="White"
+            TextColor="Black"
+            PlaceholderColor="#888"
+            HeightRequest="50" />
+
+        <!-- From Date Field -->
+        <Label 
+            Text="From Date"
+            FontAttributes="Bold"
+            TextColor="#666" />
+        <DatePicker 
+            MinimumDate="01/01/2024"
+            MaximumDate="12/31/2099"
+            TextColor="Black"
+            BackgroundColor="White"
+            HeightRequest="50" />
+
+        <!-- To Date Field -->
+        <Label 
+            Text="To Date"
+            FontAttributes="Bold"
+            TextColor="#666" />
+        <DatePicker 
+            MinimumDate="01/01/2024"
+            MaximumDate="12/31/2099"
+            TextColor="Black"
+            BackgroundColor="White"
+            HeightRequest="50" />
+
+        <!-- Download Button -->
+        <Button 
+            Text="Download Report"
+            BackgroundColor="#007BFF"
+            TextColor="White"
+            FontAttributes="Bold"
+            CornerRadius="8"
+            HeightRequest="50"
+            VerticalOptions="EndAndExpand"
+            HorizontalOptions="FillAndExpand"
+            Clicked="DownloadBtn_Clicked" />
+
     </VerticalStackLayout>
 </ContentPage>
